syntax = "proto3";
option go_package = "github.com/rancher/opni/plugins/metrics/pkg/apis/remotewrite";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

package remotewrite;

service RemoteWrite {
  rpc Push(Payload) returns (google.protobuf.Empty);
  rpc SyncRules(Payload) returns (google.protobuf.Empty);
}

message Payload {
  // string AuthorizedClusterID = 1;
  map<string, string> Headers = 3;
  bytes Contents = 4;
}